tests/core/interpreter/test_infer_target_names_data/golden/eponymous_dep_rejected.golden.stderr
# This file is @generated, regenerate by re-running test with `-- --env BUCK2_UPDATE_GOLDEN=1` appended to the test command

Command failed: 
Error evaluating expression:
    deps(root//:consumer)
    ^-------------------^


Caused by:
    0: Error evaluating build file: `root//:TARGETS.fixture`
    1: error: Error coercing attribute `deps` of `root//:consumer`
        --> TARGETS.fixture:3:1
         |
       3 | / consumer(
       4 | |     name = "consumer",
       5 | |     deps = ["//lib/greeting"],
       6 | | )
         | |_^
         |
       Traceback (most recent call last):
         * TARGETS.fixture:3, in <module>
             consumer(
       
    2: Error coercing attribute `deps` of type `attrs.list(attrs.dep(), default=[])`
    3: Error coercing ["//lib/greeting"]
    4: Error coercing "//lib/greeting"
    5: Error parsing target pattern `//lib/greeting`
    6: Expected pattern to contain `:`, trailing `/...` or literal `...`.
